# nfl-divisions-power-rankings

./: .gitignore  Lib.hs  Main.hs  README.md  README.txt  RESULTS.csv  Simple.hs  convert0  nfl-divisions-power-rankings.cabal  run  stack.yaml
main/: CSV.hs  Chart.hs  Simple.hs
src/: Results.hs
