name:                nfl-divisions-power-rankings
version:             0.1.0
synopsis:            NFL Divisions Power Rankings
homepage:            http://github.com/mfine/nfl-divisions-power-rankings
license:             BSD3
license-file:        LICENSE
author:              Mark Fine
maintainer:          mark.fine@gmail.com
copyright:           2015 Mark Fine
category:            Football
build-type:          Simple
cabal-version:       >=1.10

executable nfl-divisions-power-rankings
  main-is:             Main.hs
  ghc-options:         -Wall -fno-warn-unused-do-bind -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , parsec
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
