name:                  nfl-divisions-power-rankings
version:               0.1.0
synopsis:              NFL Divisions Power Rankings
homepage:              http://github.com/mfine/nfl-divisions-power-rankings
license:               BSD3
license-file:          LICENSE
author:                Mark Fine
maintainer:            mark.fine@gmail.com
copyright:             2015 Mark Fine
category:              Football
build-type:            Simple
cabal-version:         >=1.10

library
  exposed-modules:     Lib
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , parsec
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable nfl-divisions-power-rankings-simple
  main-is:             Simple.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , nfl-divisions-power-rankings
                     , parsec
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
