name:                  nfl-divisions-power-rankings
version:               0.1.0
synopsis:              NFL Divisions Power Rankings
homepage:              http://github.com/mfine/nfl-divisions-power-rankings
license:               BSD3
license-file:          LICENSE
author:                Mark Fine
maintainer:            mark.fine@gmail.com
copyright:             2015 Mark Fine
category:              Football
build-type:            Simple
cabal-version:         >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Results
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , parsec
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable nfl-divisions-power-rankings-simple
  hs-source-dirs:      main
  main-is:             Simple.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , nfl-divisions-power-rankings
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable nfl-divisions-power-rankings-csv
  hs-source-dirs:      main
  main-is:             CSV.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , nfl-divisions-power-rankings
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable nfl-divisions-power-rankings-chart
  hs-source-dirs:      main
  main-is:             Chart.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Chart
                     , Chart-cairo
                     , random
                     , nfl-divisions-power-rankings
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
